[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "flaskit"
dynamic = ["version"]
description = "The Flaskit Framework - Modern Python Web Framework"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Flaskit Team", email = "team@flaskitframework.com"}
]
maintainers = [
    {name = "Flaskit Team", email = "team@flaskitframework.com"}
]
keywords = ["Flaskit", "FlaskitFramework", "Python", "ORM", "Web", "Framework"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.7"
dependencies = [
    "inflection>=0.3,<0.4",
    "exceptionite>=2.2,<3.0",
    "pendulum>=2,<3",
    "jinja2<3.2",
    "cleo>=0.8.1,<0.9",
    "hupper>=1.10,<1.11",
    "bcrypt>=3.2,<3.3",
    "whitenoise>=5.2,<5.3",
    "python-dotenv>=0.15,<0.16",
    "masonite-orm>=2.14,<3",
    "hashids>=1.3,<1.4",
    "cryptography>=36,<37",
    "tldextract>=2.2,<2.3",
    "hfilesize>=0.1",
    "dotty_dict>=1.3.0,<1.40",
    "pyjwt>=2.4,<2.5",
    "pytest>=7,<8",
    "werkzeug>=2,<3; python_version < '3.8'",
    "werkzeug>=3,<4; python_version >= '3.8'",
    "watchdog>=2,<=4",
    "phonenumbers>=8.12,<9",
]

[project.optional-dependencies]
test = [
    "coverage",
    "pytest",
    "redis",
    "boto3",
    "pusher",
    "pymemcache",
    "vonage",
    "slackblocks",
    "argon2-cffi",
    "pwnedapi",
]

[project.urls]
Homepage = "https://github.com/flaskitframework/flaskit"
Documentation = "https://docs.flaskitframework.com"
Repository = "https://github.com/flaskitframework/flaskit"
"Bug Tracker" = "https://github.com/flaskitframework/flaskit/issues"
Changelog = "https://github.com/flaskitframework/flaskit/blob/main/CHANGELOG.md"

[project.scripts]
flaskit = "flaskit.commands.Entry:application.run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/flaskit/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/flaskit"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/.*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
